--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ message(STATUS ${LGL_CFLAGS})
 configure_file(lglcfg.h.in lglcfg.h)
 configure_file(lglcflags.h.in lglcflags.h)
 
-include_directories(${CMAKE_BINARY_DIR})
+include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 #set(AIGER "")
 
@@ -25,8 +25,9 @@ add_library(lgl lglib lglbnr lgldimacs lglopts)
 
 add_library(lingeling INTERFACE)
 target_link_libraries(lingeling INTERFACE lglmain lgl)
+target_include_directories(lingeling INTERFACE .)
 
-add_library(lglmain OBJECT lglmain.c lglib.h)
+add_library(lglmain STATIC lglmain.c lglib.h)
 add_library(plingeling plingeling.c lglib.h)
 target_link_libraries(plingeling lgl pthread) 
 add_library(treengeling treengeling.c lglib.h)
@@ -42,7 +43,7 @@ target_link_libraries(lgluntrace lgl)
 add_library(lglddtrace lglddtrace.c lglib.h)
 target_link_libraries(lglddtrace lgl)
 
-add_library(lglib OBJECT lglib.c lglib.h lglconst.h lgloptl.h lglopts.h)
-add_library(lgldimacs OBJECT lgldimacs.c lgldimacs.h)
-add_library(lglbnr OBJECT lglbnr.c lglcfg.h lglcflags.h makefile)
-add_library(lglopts OBJECT lglopts.c lglopts.h lglconst.h lgloptl.h)
+add_library(lglib STATIC lglib.c lglib.h lglconst.h lgloptl.h lglopts.c lglopts.h)
+add_library(lgldimacs STATIC lgldimacs.c lgldimacs.h)
+add_library(lglbnr STATIC lglbnr.c lglcfg.h lglcflags.h makefile)
+add_library(lglopts STATIC lglopts.c lglopts.h lglconst.h lgloptl.h)
